Filling out TS "Variables" and "Operators".

--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "93c9ee45",
    "metadata": {},
@@ -11,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "0687dab1",
    "metadata": {},
    "outputs": [
@@ -21,7 +20,7 @@
        "undefined"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,6 +60,7 @@
     "  let tuple: [number, string] = [42, \"TypeScript\"];\n",
     "  let firstValue: number = tuple[0];\n",
     "  let secondValue: string = tuple[1];\n",
+    "  tuple[0] = 100; // tuples are mutable (unlike Python)\n",
     "\n",
     "  // Enum\n",
     "  enum Color {\n",
@@ -96,6 +96,7 @@
     "  function throwError(): never {\n",
     "    throw new Error(\"An error occurred.\");\n",
     "  }\n",
+    "  // let n: never = throwError();\n",
     "\n",
     "  // Object\n",
     "  let obj: object = { key: \"value\" };\n",
@@ -103,7 +104,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "795d78e9",
    "metadata": {},
@@ -163,16 +163,15 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b8fd3763",
    "metadata": {},
    "source": [
     "# Unknown\n",
     "\n",
-    "Unknown is sort of similar to `any`, but it is much more restricted how you can use it. It is not similar to null or undefined because it is the type that is not known at compile-time, not the value at runtime.\n",
+    "Unknown is sort of similar to `any`, but it is much more restricted how you can use it. Instead of doing whatever you want, like `any`, you have to convert to a type first.  It is not similar to null or undefined because it is the type that is not known at compile-time, not the value at runtime.\n",
     "\n",
-    "It is also sort of similar to `object` in some ways.\n"
+    "It is also sort of similar to `object` in some ways - because you can't do any type-specific operations on it without casting."
    ]
   },
   {
@@ -232,7 +231,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1d497980",
    "metadata": {},
@@ -311,7 +309,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c0691f18",
    "metadata": {},
@@ -393,17 +390,20 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ac4c9b53",
    "metadata": {},
    "source": [
-    "# Equality\n"
+    "# Equality\n",
+    "\n",
+    "`==` and `===` are equivalent for reference types like objects and arrays, but a little different for numbers and strings.  In JavaScript, `==` does a conversion (eg. number to string) before the comparison, whereas `===` does not, which is why they say it's a value and type equality.\n",
+    "\n",
+    "In TypeScript, it is recommended, and often enforced, to only ever use `===` and just pretend `==` does not exist.  That way, you don't have to worry about the differences or any weird automatic behavior."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "8f14c252",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "undefined"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,6 @@
     "\n",
     "  // Object.equals() for value equality\n",
     "  // Only work if implemented (see Classes notebook)\n",
-    "  //console.log(arr1.equals(arr2));\n",
     "  //console.log(obj1.equals(obj2));\n",
     "\n",
     "  // Value Equality for Arrays (deep comparison)\n",
@@ -498,7 +497,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6e8548c6",
    "metadata": {},
@@ -508,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "5b6f30bd",
    "metadata": {},
    "outputs": [
@@ -529,7 +527,7 @@
        "{ length1: 5, numberValue: 10, stringValue: '10', numberValue3: 5 }"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,15 +576,15 @@
     "  }\n",
     "*/\n",
     "\n",
-    "  // Invalid Casting (Runtime Error)\n",
+    "  // Invalid Casting (unexpected behavior)\n",
     "  let value4: any = \"Hello\";\n",
     "  let length3: number;\n",
     "\n",
     "  try {\n",
-    "    let value5: boolean = value4 as boolean; // Runtime Error: Cannot convert 'string' to 'boolean'\n",
-    "    console.log(value5);\n",
+    "    let value5: boolean = value4 as boolean;\n",
+    "    console.log(value5); // prints a string!!! (because the JS code is missing the 'as'\n",
     "  } catch (error) {\n",
-    "    console.error(\"Error occurred during invalid casting:\", error);\n",
+    "    console.error(\"Error occurred during invalid casting:\", error); // not called\n",
     "  }\n",
     "\n",
     "  return {\n",
@@ -599,7 +597,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e920eb07",
    "metadata": {},
@@ -609,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "f57a3559",
    "metadata": {},
    "outputs": [
@@ -625,6 +622,7 @@
       "undefined\n",
       "Hello\n",
       "Default Value\n",
+      "value2b: 0\n",
       "Hello\n",
       "undefined\n",
       "undefinedValue is undefined\n",
@@ -648,7 +646,7 @@
        "}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,6 +682,8 @@
     "  console.log(value1); // Output: \"Hello\" (since nullableValue is not null)\n",
     "  let value2: string | undefined = undefinedValue ?? \"Default Value\";\n",
     "  console.log(value2);\n",
+    "  let value2b: number = 0 ?? 1;\n",
+    "  console.log(\"value2b: \" + value2b); // Output: 0\n",
     "\n",
     "  // Non-null assertion operator (doesn't throw)\n",
     "  let value3: string = nullableValue!; // TS just trusts us it's not null\n",
@@ -718,6 +718,10 @@
     "  if (uninitializedValue === undefined) {\n",
     "    console.log(\"uninitializedValue is undefined\"); // OUTPUT\n",
     "  }\n",
+    "    \n",
+    "  if (uninitializedValue === null) {\n",
+    "    console.log(\"uninitializedValue is null\");\n",
+    "  }\n",
     "\n",
     "  // More concise optional variable syntax for CLASS MEMBERS\n",
     "  ////let optionalValue?: string; // same as string | undefined\n",
@@ -740,7 +744,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ca0c5f93",
    "metadata": {},
@@ -803,7 +806,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "346234fa",
    "metadata": {},
@@ -813,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "05f1c2f8",
    "metadata": {},
    "outputs": [
@@ -849,12 +851,16 @@
       "1\n",
       "\n",
       "String Concatenation:\n",
-      "John Doe\n",
+      "John Doe3\n",
       "\n",
       "Typeof Operator:\n",
       "string\n",
       "number\n",
       "boolean\n",
+      "object\n",
+      "undefined\n",
+      "object\n",
+      "object\n",
       "\n",
       "Ternary Operator:\n",
       "Adult\n",
@@ -880,7 +886,7 @@
        "undefined"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,13 +939,17 @@
     "  let lastName = \"Doe\";\n",
     "  console.log(\"\\nString Concatenation:\");\n",
     "  let fullName = firstName + \" \" + lastName;\n",
-    "  console.log(fullName); // Output: John Doe\n",
+    "  console.log(fullName + 3); // Output: John Doe3\n",
     "\n",
-    "  // Typeof operator\n",
+    "  // Typeof operator (from JS, string)\n",
     "  console.log(\"\\nTypeof Operator:\");\n",
     "  console.log(typeof firstName); // Output: string\n",
     "  console.log(typeof a); // Output: number\n",
     "  console.log(typeof x); // Output: boolean\n",
+    "  console.log(typeof null); // Output: object\n",
+    "  console.log(typeof undefined); // Output: undefined\n",
+    "  console.log(typeof []); // Output: object\n",
+    "  console.log(typeof {x: 20}); // Output: object (useless for class hierachy type checking)\n",
     "\n",
     "  // Ternary operator\n",
     "  let age = 20;\n",
@@ -981,7 +991,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ee813bff",
    "metadata": {},
@@ -1097,7 +1106,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c379d2c5",
    "metadata": {},
@@ -1109,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "id": "235568f3",
    "metadata": {},
    "outputs": [
@@ -1129,7 +1137,7 @@
        "{ value1AndValue2: 0, value2OrValue3: 'Hello', notValue4: true }"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,6 +1159,10 @@
     "  let result2 = value2 || value3; // Logical OR operation\n",
     "  let result3 = !value4; // Logical NOT operation\n",
     "\n",
+    "  if (value1 && value2) {\n",
+    "      console.log('hi'); // doesn't print (but does compile)\n",
+    "  }\n",
+    "    \n",
     "  return {\n",
     "    value1AndValue2: result1,\n",
     "    value2OrValue3: result2,\n",
@@ -1160,7 +1172,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3b2becdc",
    "metadata": {},
@@ -1205,7 +1216,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6869070e",
    "metadata": {},
@@ -1294,6 +1304,7 @@
     "\n",
     "  // instanceof (boolean condition)\n",
     "  //// works because JS code can examine prototype chain\n",
+    "    // doesn't work for primitives\n",
     "  console.log(\"-instanceof-\");\n",
     "  console.log(book instanceof Book);\n",
     "  console.log(magazine instanceof Magazine);\n",
@@ -1312,7 +1323,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ac987e9e",
    "metadata": {},
@@ -1376,7 +1386,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d41e0a5b",
    "metadata": {},
@@ -1431,7 +1440,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a0c0e11d",
    "metadata": {},
@@ -1488,9 +1496,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8433557d",
+   "metadata": {},
+   "source": [
+    "# Spread Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "42bc0624",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1, 2, 3, 4, 5 ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  const a = [1, 2, 3];\n",
+    "  const b = [...a, 4, 5]\n",
+    "  console.log(b);\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18fec00f",
+   "id": "4993bf62",
    "metadata": {},
    "outputs": [],
    "source": []
