Filling out "Collections" + "Strings" TS sections.

--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "eafdaef4",
    "metadata": {},
@@ -16,7 +15,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "75abc74a",
    "metadata": {},
@@ -101,7 +99,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ce67f79a",
    "metadata": {},
@@ -111,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "id": "0259ddab",
    "metadata": {},
    "outputs": [
@@ -144,9 +141,11 @@
     "\n",
     "// Array methods\n",
     "numbers.push(6); // Add an element to the end\n",
-    "fruits.pop(); // Remove the last element\n",
+    "console.log(\"pop: \" + fruits.pop()); // Remove the last element\n",
     "const slicedNumbers = numbers.slice(1, 4); // Slice elements from index 1 to 3\n",
-    "console.log(slicedNumbers)\n",
+    "console.log(\"sliced: \" + slicedNumbers);\n",
+    "slicedNumbers[0] = 100;\n",
+    "console.log(numbers); // the 100 doesn't show up - the slice is a COPY!\n",
     "\n",
     "// Iterating over arrays\n",
     "for (let i = 0; i < numbers.length; i++) {\n",
@@ -157,8 +156,13 @@
     "  console.log(fruit);\n",
     "}\n",
     "\n",
+    "console.log(\"nums\");\n",
     "numbers.forEach((num) => {\n",
     "  console.log(num);\n",
+    "});\n",
+    "console.log(\"indices\");\n",
+    "numbers.forEach((num, i) => { // it knows the difference based on your lambda\n",
+    "  console.log(i);\n",
     "});\n",
     "\n",
     "// Array spread operator\n",
@@ -181,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "id": "60b6916d",
    "metadata": {},
    "outputs": [
@@ -189,27 +193,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: /home/davidpet/miniconda3/envs/ai/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
-      "\u001b[33m1\u001b[39m\n",
-      "banana\n",
-      "\u001b[33m5\u001b[39m\n",
-      "\u001b[33m3\u001b[39m\n",
-      "[ \u001b[33m2\u001b[39m, \u001b[33m10\u001b[39m, \u001b[33m4\u001b[39m ]\n",
-      "\u001b[33m1\u001b[39m\n",
-      "\u001b[33m2\u001b[39m\n",
-      "\u001b[33m10\u001b[39m\n",
-      "\u001b[33m4\u001b[39m\n",
-      "\u001b[33m5\u001b[39m\n",
-      "\u001b[33m6\u001b[39m\n",
-      "pear\n",
-      "banana\n",
-      "\u001b[33m1\u001b[39m\n",
-      "\u001b[33m2\u001b[39m\n",
-      "\u001b[33m10\u001b[39m\n",
-      "\u001b[33m4\u001b[39m\n",
-      "\u001b[33m5\u001b[39m\n",
-      "\u001b[33m6\u001b[39m\n",
-      "[ \u001b[33m2\u001b[39m, \u001b[33m10\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m6\u001b[39m ]\n"
+      "\u001b[33m1\u001b[39m\r\n",
+      "banana\r\n",
+      "\u001b[33m5\u001b[39m\r\n",
+      "\u001b[33m3\u001b[39m\r\n",
+      "pop: orange\r\n",
+      "sliced: 2,10,4\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m10\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m, \u001b[33m6\u001b[39m ]\r\n",
+      "\u001b[33m1\u001b[39m\r\n",
+      "\u001b[33m2\u001b[39m\r\n",
+      "\u001b[33m10\u001b[39m\r\n",
+      "\u001b[33m4\u001b[39m\r\n",
+      "\u001b[33m5\u001b[39m\r\n",
+      "\u001b[33m6\u001b[39m\r\n",
+      "pear\r\n",
+      "banana\r\n",
+      "nums\r\n",
+      "\u001b[33m1\u001b[39m\r\n",
+      "\u001b[33m2\u001b[39m\r\n",
+      "\u001b[33m10\u001b[39m\r\n",
+      "\u001b[33m4\u001b[39m\r\n",
+      "\u001b[33m5\u001b[39m\r\n",
+      "\u001b[33m6\u001b[39m\r\n",
+      "indices\r\n",
+      "\u001b[33m0\u001b[39m\r\n",
+      "\u001b[33m1\u001b[39m\r\n",
+      "\u001b[33m2\u001b[39m\r\n",
+      "\u001b[33m3\u001b[39m\r\n",
+      "\u001b[33m4\u001b[39m\r\n",
+      "\u001b[33m5\u001b[39m\r\n",
+      "[ \u001b[33m2\u001b[39m, \u001b[33m10\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m6\u001b[39m ]\r\n"
      ]
     }
    ],
@@ -218,7 +231,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "41a7d607",
    "metadata": {},
@@ -303,7 +315,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3cafdbef",
    "metadata": {},
@@ -389,7 +400,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "64d3367f",
    "metadata": {},
@@ -459,7 +469,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "58308ae6",
    "metadata": {},
@@ -533,7 +542,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2748e20c",
    "metadata": {},
@@ -599,7 +607,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "acf282d7",
    "metadata": {},
@@ -608,7 +615,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6492b075",
    "metadata": {},
@@ -619,7 +625,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "57755a4c",
    "metadata": {},
@@ -726,9 +731,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a29dac91",
+   "metadata": {},
+   "source": [
+    "# Destructuring Objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0e4be692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/destructuring.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/destructuring.ts\n",
+    "\n",
+    "const o = {a: 1, b: 2, c: 3}; // notice we ignore c in the destructuring\n",
+    "const {a, b} = o; // keeping key names as variable names\n",
+    "const {a: x, b: y} = o; // renaming the variables\n",
+    "\n",
+    "console.log(o);\n",
+    "console.log(a);\n",
+    "console.log(b);\n",
+    "console.log(x);\n",
+    "console.log(y);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "32e399c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ a: \u001b[33m1\u001b[39m, b: \u001b[33m2\u001b[39m, c: \u001b[33m3\u001b[39m }\r\n",
+      "\u001b[33m1\u001b[39m\r\n",
+      "\u001b[33m2\u001b[39m\r\n",
+      "\u001b[33m1\u001b[39m\r\n",
+      "\u001b[33m2\u001b[39m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/destructuring.ts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dcdebc4",
+   "id": "1e7fd7a7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -750,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
