--- a/typescript/Strings and Printing.ipynb
+++ b/typescript/Strings and Printing.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "aa638950",
    "metadata": {},
@@ -11,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "eb63a915",
    "metadata": {},
    "outputs": [
@@ -24,6 +23,8 @@
       "Last Character: !\n",
       "Substring: TypeScri\n",
       "Greeting: Hello, John!\n",
+      "Greeting: Hello, John!\n",
+      "Greeting: Hello, John! 2\n",
       "Info: My name is John and I am 30 years old.\n",
       "Uppercase: HELLO, TYPESCRIPT!\n",
       "Lowercase: hello, typescript!\n",
@@ -36,7 +37,7 @@
        "undefined"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,6 +64,8 @@
     "  const name = \"John\";\n",
     "  const greeting = `Hello, ${name}!`;\n",
     "  console.log(\"Greeting:\", greeting);\n",
+    "  console.log(\"Greeting: \" + greeting);\n",
+    "  console.log(\"Greeting: \" + greeting + \" \" + 2);\n",
     "\n",
     "  // String interpolation (backtick, $, and {})\n",
     "  const age = 30;\n",
@@ -88,7 +91,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d78bcc34",
    "metadata": {},
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "0534239f",
    "metadata": {},
    "outputs": [
@@ -120,7 +122,7 @@
        "undefined"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +168,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "987dcb3a",
    "metadata": {},
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "48bcea69",
    "metadata": {},
    "outputs": [
@@ -188,6 +189,7 @@
       "{ name: 'John', age: 30 }\n",
       "42\n",
       "123\n",
+      "123\n",
       "123\n"
      ]
     },
@@ -197,7 +199,7 @@
        "undefined"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,6 +224,7 @@
     "  const str = \"123\";\n",
     "  const parsedNum = parseInt(str);\n",
     "  console.log(parsedNum); // Output: 123\n",
+    "  console.log(parseFloat(str)); // Output: 123\n",
     "  // Not 100% equivalent (subtle differences)\n",
     "  // Number() is a little more strict about\n",
     "  // rejecting non-number characters.\n",
@@ -237,7 +240,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e9e4918d",
    "metadata": {},
@@ -288,7 +290,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e7824787",
    "metadata": {},
@@ -334,7 +335,7 @@
     "  const name = \"John\";\n",
     "  console.log(`Hello, ${name}!`);\n",
     "\n",
-    "  // Separated by space like pyhon's print()\n",
+    "  // Separated by space like python's print()\n",
     "  console.log(1, 2, 3);\n",
     "\n",
     "  // You can print objects too, not just strings.\n",
@@ -345,7 +346,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "daca0d0a",
    "metadata": {},
@@ -405,7 +405,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6b85ea25",
    "metadata": {},
@@ -415,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "961d995d",
    "metadata": {},
    "outputs": [
@@ -439,7 +438,7 @@
        "undefined"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +447,7 @@
     "(() => {\n",
     "  // NO RAW STRINGS!\n",
     "\n",
-    "  const singleQuote = \"Hello, TypeScript!\";\n",
+    "  const singleQuote = 'Hello, TypeScript!';\n",
     "  const doubleQuote = \"Hello, TypeScript!\";\n",
     "  const backtick = `Hello, TypeScript!`;\n",
     "  const multilineString = `\n",
@@ -465,7 +464,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "61786d77",
    "metadata": {},
@@ -475,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "id": "e335d5bf",
    "metadata": {},
    "outputs": [
@@ -484,13 +482,10 @@
      "output_type": "stream",
      "text": [
       "true\n",
-      "[\n",
-      "  'TypeScript',\n",
-      "  index: 7,\n",
-      "  input: 'Hello, TypeScript!',\n",
-      "  groups: undefined\n",
-      "]\n",
-      "Hello, JavaScript!\n"
+      "\n",
+      "[ '123', '456' ]\n",
+      "\n",
+      "Hello, TypeScript!  #123 #456\n"
      ]
     },
     {
@@ -499,43 +494,47 @@
        "undefined"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(() => {\n",
-    "  const str = \"Hello, TypeScript!\";\n",
+    "  const str = \"Hello, TypeScript!  123 456\";\n",
     "\n",
     "  // Matching a pattern\n",
     "  // Note the Perl-like syntax.\n",
-    "  const pattern = /TypeScript/;\n",
+    "  const pattern = /(\\d+)/g; // global flag to get multiple matches\n",
     "  const isMatch = pattern.test(str);\n",
     "  console.log(isMatch); // Output: true\n",
     "\n",
     "  // Extracting matches\n",
-    "  const matches = str.match(pattern);\n",
-    "  console.log(matches); // Output: ['TypeScript']\n",
-    "\n",
+    "  console.log();\n",
+    "  let match = str.match(pattern);\n",
+    "  console.log(match); // Output: ['123', '456'] (tuple representing the match)\n",
+    "  // without the global flag, it would get a single tuple with info about the '123' match\n",
+    "  console.log();\n",
+    "    \n",
     "  // Replacing matches\n",
-    "  const replaced = str.replace(pattern, \"JavaScript\");\n",
+    "  const replaced = str.replace(pattern, \"#$1\");\n",
     "  console.log(replaced); // Output: 'Hello, JavaScript!'\n",
     "})();\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d4109068",
    "metadata": {},
    "source": [
-    "# Quoted vs. Unquoted Object Keys\n"
+    "# Quoted vs. Unquoted Object Keys\n",
+    "\n",
+    "Unquoted keys may be subject to __minification__ while quoted ones are not.  The minifier may be smart enough to detect this and leave it alone."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "6ec11f97",
    "metadata": {},
    "outputs": [
@@ -548,7 +547,8 @@
       "New York\n",
       "One\n",
       "True\n",
-      "[ '1', 'name', 'age', 'city', 'true' ]\n"
+      "Quoted\n",
+      "[ '1', 'name', 'age', 'city', 'true', 'quoted' ]\n"
      ]
     },
     {
@@ -557,7 +557,7 @@
        "undefined"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,16 +570,19 @@
     "    city: \"New York\",\n",
     "    1: \"One\",\n",
     "    true: \"True\",\n",
+    "    \"quoted\": \"Quoted\",\n",
     "  };\n",
     "\n",
-    "  // The string keys require [] notation\n",
+    "  // To use strings as lookup keys, use [] notation\n",
     "  // instead of direct access.\n",
-    "  // But all members can be accessed that way.\n",
+    "  // All members can be accessed that way.\n",
     "  console.log(obj.name); // Output: John\n",
     "  console.log(obj.age); // Output: 30\n",
     "  console.log(obj[\"city\"]); // Output: New York\n",
     "  console.log(obj[1]); // Output: One\n",
     "  console.log(obj[\"true\"]); // Output: True\n",
+    "  console.log(obj.quoted); // Output: Quoted\n",
+    "  // console.log(obj.1); // ILLEGAL\n",
     "\n",
     "  // You can see the keys defined on the\n",
     "  // object as string.\n",
@@ -588,7 +591,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cd8d3797",
    "metadata": {},
@@ -638,7 +640,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0c677cbc",
    "metadata": {},
@@ -698,7 +699,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "216143ba",
    "metadata": {},
