Filling out "Control Flow" TS section.

--- a/typescript/Control Flow.ipynb
+++ b/typescript/Control Flow.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fad2f436",
    "metadata": {},
@@ -131,7 +130,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d3faa90e",
    "metadata": {},
@@ -183,11 +181,13 @@
     "\n",
     "  /* (can't run in jupyter because of ES5)\n",
     "  // for-of on object (works for array too)\n",
-    "  for (const [index, value] of Object.entries(obj)) {\n",
+    "  for (const [keyOrIndex, value] of Object.entries(obj)) {\n",
     "    // code to execute on index and value\n",
     "  }\n",
     "  */\n",
-    "\n",
+    "    \n",
+    "  // for maps, use .entries(), .keys(), and .values()\n",
+    "    \n",
     "  // for-await-of loop\n",
     "  /* (can't run in jupyter because of ES5)\n",
     "  async function* asyncGenerator() {\n",
@@ -205,7 +205,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "da8401d7",
    "metadata": {},
@@ -261,7 +260,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9197c7b2",
    "metadata": {},
@@ -307,7 +305,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4491b8d0",
    "metadata": {},
@@ -353,7 +350,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0a41db4d",
    "metadata": {},
@@ -409,7 +405,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0120c6db",
    "metadata": {},
@@ -422,7 +417,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "32b2222d",
    "metadata": {},
@@ -431,7 +425,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4e835403",
    "metadata": {},
@@ -488,7 +481,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "00e56ca9",
    "metadata": {},
@@ -533,7 +525,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6bda25f5",
    "metadata": {},
@@ -582,7 +573,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "72f096d0",
    "metadata": {},
