--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "05f1c2f8",
    "metadata": {},
    "outputs": [
@@ -877,7 +877,12 @@
       "-6\n",
       "10\n",
       "2\n",
-      "2\n"
+      "2\n",
+      "\n",
+      "Pre and Post\n",
+      "5\n",
+      "7\n",
+      "7\n"
      ]
     },
     {
@@ -886,7 +891,7 @@
        "undefined"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,6 +992,13 @@
     "  console.log(a << 1); // Left Shift: 1010 (10 in decimal)\n",
     "  console.log(a >> 1); // Right Shift: 0010 (2 in decimal)\n",
     "  console.log(a >>> 1); // Unsigned Right Shift: 0010 (2 in decimal)\n",
+    "    \n",
+    "  // pre and post increment/decrement\n",
+    "  console.log();\n",
+    "  console.log(\"Pre and Post\");\n",
+    "  console.log(a++);\n",
+    "  console.log(++a);\n",
+    "  console.log(a--);\n",
     "})();\n"
    ]
   },
