Adding TS playground link.

--- a/typescript/Setup.ipynb
+++ b/typescript/Setup.ipynb
@@ -351,9 +351,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4dee7dd6",
+   "metadata": {},
+   "source": [
+    "# Playground\n",
+    "\n",
+    "https://www.typescriptlang.org/play - very useful for seeing what JS is emitted by TS code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f276984",
+   "id": "77267604",
    "metadata": {},
    "outputs": [],
    "source": []
