Adding some notes on primitives and JS types.

--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -1548,9 +1548,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a849e831",
+   "metadata": {},
+   "source": [
+    "# Primitives and Boxing\n",
+    "\n",
+    "Primitive types in JS and TS include:\n",
+    "  - string\n",
+    "  - boolean\n",
+    "  - number\n",
+    "  - undefined\n",
+    "  - null\n",
+    "  - symbol\n",
+    "  - bigint\n",
+    "  \n",
+    "When these values are assigned, they are treated like __value types__ as in Java primitives, not as objects like in Python.\n",
+    "\n",
+    "JavaScript has __boxing__, and it is even more automatic than in Java.  For instance, `const x = 5` makes a number object, but you can call `x.toString()`, treating it like an object.  That will actually __box the object__ to make the call transparently.  The same happens when you call methods of `string`, which is also a primitive and not a reference type.\n",
+    "\n",
+    "The boxed types are capitalized, but you usually won't deal with them directly (not recommended to do so).  For instance, `String` and `Number`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aedc53a6",
+   "metadata": {},
+   "source": [
+    "# Types Added by TS On Top of JS\n",
+    "\n",
+    "Most of the types you see in TS actually come from JS, but TS also adds some new things:\n",
+    "  - enums\n",
+    "  - tuples\n",
+    "  - any\n",
+    "  - unknown\n",
+    "  - never\n",
+    "  - void\n",
+    "  \n",
+    " Also, generics don't exist at all in JS.  You use classes like `Map` as the raw types all the time, with no type safety on the elements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "735f691e",
+   "metadata": {},
+   "source": [
+    "# bigint\n",
+    "\n",
+    "`number` is effectively limited to 54-bit integers in terms of maximum range, so `bigint` is provided if you need to go bigger.\n",
+    "\n",
+    "`const x = 5n` will make a `bigint` due to the trailing `n`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4993bf62",
+   "id": "b5591436",
    "metadata": {},
    "outputs": [],
    "source": []
